# GS-O2O

./: .gitignore  README.md  modal_evaluate.py  modal_train.py  pyproject.toml
benchmarks/comb45/: profile_table.csv  split_metadata.json
configs/: comb45_hpwl_h20_op9.json  comb45_hpwl_h20_op9.yaml  iscas85_hpwl.json  iscas85_hpwl.yaml  iscas85_hpwl_h20_op9.json  iscas85_hpwl_h20_op9.yaml
scripts/: abc_hpwl_flow.tcl  export_standalone_repo.sh  monitor_episode_progress.py  run_collect_d2.sh  run_comb45_main.sh  run_comb45_serial_wait.sh  run_eval.sh  run_expanded_h20_op9.sh  run_gso2o_variant_pipeline.py  run_modal_collect.sh  run_modal_eval.sh  run_modal_online.sh  run_modal_train.sh  run_online_gso2o.sh  run_train_gso2o.sh
src/: abc_runner.py  baselines_awac.py  baselines_cql.py  baselines_iql.py  collect_d2.py  dataset.py  evaluate.py  expanded_experiments.py  features.py  gso2o_policy.py  hpwl_eval.py  modal_utils.py  models.py  online_gso2o.py  train_gso2o.py  training_helpers.py  utils.py
